# C-CPP-Tutorial

./: .gitignore  CMakeLists.txt  README.md  _build_debug.sh  _run_debug.sh
linux/environment_variables/: main.c
linux/locale/: main.c
macro/: CMakeLists.txt  multiple_statements.c  sizeof_macro_unittest.cc  useful_macros.c
precision/: out  precision.cc
